--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
 
             <!--Links-->
             <section>
-                <a target="_bLank" href="https://rank-fortress-digital-agency.github.io/phillypaintexperts-07-22/">https://rank-fortress-digital-agency.github.io/phillypaintexperts-07-22/</a><br>
-                <a target="_bLank" href="http://phillypaintexperts-07-22.s3-website.ap-south-1.amazonaws.com">http://phillypaintexperts-07-22.s3-website.ap-south-1.amazonaws.com</a><br>
-                <a target="_bLank" href="https://gilded-cheesecake-bcee51.netlify.app/">https://gilded-cheesecake-bcee51.netlify.app/</a><br>
+                <a target="_bLank" href="https://rank-fortress-digital-agency.github.io/phillypaintexperts-08-22/">https://rank-fortress-digital-agency.github.io/phillypaintexperts-08-22/</a><br>
+                <a target="_bLank" href="http://phillypaintexperts-08-22.s3-website-ap-southeast-1.amazonaws.com">http://phillypaintexperts-08-22.s3-website-ap-southeast-1.amazonaws.com</a><br>
+                <a target="_bLank" href="https://fastidious-valkyrie-917fde.netlify.app/">https://fastidious-valkyrie-917fde.netlify.app/</a><br>
             </section>
 
         </div>
